<resources>
    <string name="app_name">DBFZ Frame Data</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="confirmEmail">Confirm Email Address</string>
    <string name="registerPrompt">Don\'t have an account? Register </string>
    <string name="hereClick">here</string>
</resources>
