<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_password"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/txt_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_password"
        app:layout_constraintVertical_bias="0.118" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="212dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_loginName" />

    <EditText
        android:id="@+id/txt_loginName"
        android:layout_width="212dp"
        android:layout_height="54dp"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_registerPrompt"
        android:layout_width="208dp"
        android:layout_height="23dp"
        android:inputType="text"
        android:text="@{@string/registerPrompt+ @string/here}"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="481dp" />

</androidx.constraintlayout.widget.ConstraintLayout>